# catcif_tools

./: .gitignore  README.md  pyproject.toml
catcif_tools/: __init__.py  biology.py  build_index.py  cache.py  catcif_tools.py  catcifextract.py  catciffromfiles.py  catcifls.py  catcifrename.py  catcifscorefile.py  catcifsequence.py  catcifslice.py  catcifsplit.py  conversion.py  path.py  scores.py  settings.py  structure.py
tests/: test_catcif_tools.py
utils/: pymol_load_catcif.py
